--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
   <title>lonelyCalculator</title>
 </head>
 <body>
+  <div class='container'>
+    <div class='calculator'>
+      <button class='equals'>=</button>
+
+      <button class='clear'>Clear</button>
+
+      <button class='operate'>+</button>
+      <button class='operate'>-</button>
+      <button class='operate'>x</button>
+      <button class='operate'>/</button>
+
+
+      <button class='numbers'>0</button>
+      <button class='numbers'>1</button>
+      <button class='numbers'>2</button>
+      <button class='numbers'>3</button>
+      <button class='numbers'>4</button>
+      <button class='numbers'>5</button>
+      <button class='numbers'>6</button>
+      <button class='numbers'>7</button>
+      <button class='numbers'>8</button>
+      <button class='numbers'>9</button>
+    </div>
+  </div>
   
 </body>
 </html>
