added display updating functions

--- a/index.html
+++ b/index.html
@@ -11,26 +11,37 @@
 <body>
   <div class='container'>
     <div class='calculator'>
+      <h1>Let's Math!</h1>
+      <div class='display'>
+        <div class='inputs'>
+          <span class='firstOperand'></span>
+          <span class='operator'></span>
+          <span class='secondOperand'></span>
+        </div>
+        <div class='result'></div>
+      </div>
+
       <button class='equals'>=</button>
 
       <button class='clear'>Clear</button>
 
-      <button class='operate'>+</button>
-      <button class='operate'>-</button>
-      <button class='operate'>x</button>
-      <button class='operate'>/</button>
+      <button class='operate plus'>+</button>
+      <button class='operate minus'>-</button>
+      <button class='operate times'>x</button>
+      <button class='operate divide'>%</button>
 
-
-      <button class='numbers'>0</button>
-      <button class='numbers'>1</button>
-      <button class='numbers'>2</button>
-      <button class='numbers'>3</button>
-      <button class='numbers'>4</button>
-      <button class='numbers'>5</button>
-      <button class='numbers'>6</button>
-      <button class='numbers'>7</button>
-      <button class='numbers'>8</button>
-      <button class='numbers'>9</button>
+      <div class='numberPad'>
+        <button class='numbers zero'>0</button>
+        <button class='numbers one'>1</button>
+        <button class='numbers two'>2</button>
+        <button class='numbers three'>3</button>
+        <button class='numbers four'>4</button>
+        <button class='numbers five'>5</button>
+        <button class='numbers six'>6</button>
+        <button class='numbers seven'>7</button>
+        <button class='numbers eight'>8</button>
+        <button class='numbers nine'>9</button>
+      </div>
     </div>
   </div>
   
