finished script for calculator and moved display to top of the screen

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div class='calculator'>
       <h1>Let's Math!</h1>
       <div class='display'>
+        <div class='result'></div>
         <div class='inputs'>
           <span class='firstOperand'></span>
           <span class='operator'></span>
           <span class='secondOperand'></span>
         </div>
-        <div class='result'></div>
       </div>
 
       <button class='equals'>=</button>
@@ -28,7 +28,7 @@
       <button class='operate plus'>+</button>
       <button class='operate minus'>-</button>
       <button class='operate times'>x</button>
-      <button class='operate divide'>%</button>
+      <button class='operate divide'>/</button>
 
       <div class='numberPad'>
         <button class='numbers zero'>0</button>
