--- a/index.html
+++ b/index.html
@@ -21,26 +21,30 @@
         </div>
       </div>
 
-      <button class='equals'>=</button>
+      <div class='containerCalculator'>
 
-      <button class='clear'>Clear</button>
+        <button class='equals'>=</button>
 
-      <button class='operate plus'>+</button>
-      <button class='operate minus'>-</button>
-      <button class='operate times'>x</button>
-      <button class='operate divide'>/</button>
+        <button class='clear'>Clear</button>
 
-      <div class='numberPad'>
-        <button class='numbers zero'>0</button>
-        <button class='numbers one'>1</button>
-        <button class='numbers two'>2</button>
-        <button class='numbers three'>3</button>
-        <button class='numbers four'>4</button>
-        <button class='numbers five'>5</button>
-        <button class='numbers six'>6</button>
-        <button class='numbers seven'>7</button>
-        <button class='numbers eight'>8</button>
-        <button class='numbers nine'>9</button>
+        <button class='operate plus'>+</button>
+        <button class='operate minus'>-</button>
+        <button class='operate times'>x</button>
+        <button class='operate divide'>/</button>
+
+        <div class='numberPad'>
+          <button class='numbers zero'>0</button>
+          <button class='numbers decimal'>.</button>
+          <button class='numbers one'>1</button>
+          <button class='numbers two'>2</button>
+          <button class='numbers three'>3</button>
+          <button class='numbers four'>4</button>
+          <button class='numbers five'>5</button>
+          <button class='numbers six'>6</button>
+          <button class='numbers seven'>7</button>
+          <button class='numbers eight'>8</button>
+          <button class='numbers nine'>9</button>
+        </div>
       </div>
     </div>
   </div>
