added correct operator symbols, added css, and tweaked js to reflect changes in html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
   <div class='container'>
     <div class='calculator'>
-      <h1>Let's Math!</h1>
       <div class='display'>
         <div class='result'></div>
         <div class='inputs'>
@@ -25,12 +24,12 @@
 
         <button class='equals'>=</button>
 
-        <button class='clear'>Clear</button>
+        <button class='clear'>AC</button>
 
         <button class='operate plus'>+</button>
         <button class='operate minus'>-</button>
-        <button class='operate times'>x</button>
-        <button class='operate divide'>/</button>
+        <button class='operate times'>×</button>
+        <button class='operate divide'>÷</button>
 
         <button class='numbers seven'>7</button>
         <button class='numbers eight'>8</button>
@@ -43,12 +42,12 @@
         <button class='numbers one'>1</button>
         <button class='numbers two'>2</button>
         <button class='numbers three'>3</button>
-        
+
         <button class='numbers zero'>0</button>
         <button class='numbers decimal'>.</button>
       </div>
     </div>
   </div>
-  
+  <footer>lonelyCalculator by Mika Adlin, lonelyheartsclubcode © </footer>
 </body>
 </html>
